--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ p	{	font-family:sans-serif;
 		margin:1px;
 	}
 
-canvas{	background-color: #E5F0FF;
+canvas{	background-color: #0000ff;
 		border-color: #007ACC;
 		border-width: 1px;
 		border-style: solid;
