--- a/main.css
+++ b/main.css
@@ -1,9 +1,16 @@
+.main 	{		color: #ffffff;
+				background-color: #0000ff;
+				font-family:sans-serif;
+				border-color: #ffffff;
+			 	border-style:solid;
+				border-width: 1px;
+			}
 
-body{	background-color: #FFFFFF;
-		padding:0px;
-		border:0px;
-		margin:0px;
-	}
+.noBorder {		border-width: 0px ;	}
+
+.double	 {		border-right: thick double #ffffff; }
+
+.padding{	padding: 2px;	}
 
 h2	{	font-family:sans-serif;
 		margin:1px;
@@ -13,52 +20,50 @@ p	{	font-family:sans-serif;
 		margin:1px;
 	}
 
-canvas{	background-color: #0000ff;
-		border-color: #007ACC;
-		border-width: 1px;
-		border-style: solid;
-		margin:0px;
-		padding:0px;
-		z-index: -1;
-	}
-
-#wrapper{	position: absolute;
-			left: 10px;
-			top: 10px;
-			width: 180px;		
-			background-color: transparent;
-			color: #000000;
-			opacity: 0.1;
-			transition: opacity 1s;
-			padding:0px;
-			margin:0px;
-			box-sizing: border-box;
-		}
-
-#wrapper:hover{	opacity: 1; }
-
 html, body {	width:  100%;
 				height: 100%;
 				margin: 0px;
 				padding:0px;
+				background-color: #ffffff;
 				overflow: hidden;
-				background-color: #007ACC;
 	   		}
 	
-button	{	font-family:sans-serif;
-			border-color: #00000;
-			border-width: 1px;
-			border-style: solid;
-			margin:1px;
-		}
-	
-form	{	font-family:sans-serif;
-			margin:1px;
-		 }
+button	{}
 
-input{	font-family:sans-serif;
-		text-align: center;
-		width:50px;
-		border-width: 0px;
-		background-color: #00000;
-	}
+select	{}
+	
+form	{	margin:0px;
+			border-width: 0px !important;
+			direction: ltr;
+		}
+
+input	{	text-align: left;
+			width:37px;
+			padding: 1px;
+		}
+
+#canvas{	float:left;
+			border-width: 0px !important;
+			margin:0px;
+			padding:0px;
+		}
+
+#internal{	border-width: 0px !important;
+			padding:0px;
+			margin:0px;
+			direction: ltr;
+		}
+
+#menus{		float:left;
+			width: 220px;
+			height: 100%;	
+			padding:5px;
+			margin:0px;
+			/*border-width: 0px !important;
+			border-right: thick double #ffffff !important;*/
+			box-sizing: border-box;
+			line-height: 200%;
+			overflow-y: scroll;
+
+			direction: rtl;
+		}
