--- a/main.css
+++ b/main.css
@@ -11,8 +11,23 @@
 .double	 {		border-right: thick double #ffffff; }
 
 .padding{	padding: 2px;
-			margin: 2px;
+			margin-top: 2px;
+			margin-bottom: 2px;
 		}
+
+.bordersTop{ 	margin-top: 10px;
+				border-top: 2px solid;
+				border-bottom: 2px solid;
+			 	border-color: #ffffff;
+			}
+
+.centred{	transform: translateX(50%) ;
+		
+		}
+
+h3	{	font-family:sans-serif;
+		margin:2px;
+	}
 
 h2	{	font-family:sans-serif;
 		margin:1px;
@@ -20,6 +35,7 @@ h2	{	font-family:sans-serif;
 
 p	{	font-family:sans-serif;
 		margin:1px;
+		line-height: 110%;
 	}
 
 html, body {	width:  100%;
@@ -45,13 +61,12 @@ input	{	text-align: left;
 		}
 
 #canvas{	float:left;
-			border-width: 0px !important;
+			
 			margin:0px;
 			padding:0px;
 		}
 
-#internal{	border-width: 0px !important;
-			padding:0px;
+#internal{	padding:0px;
 			margin:0px;
 			direction: ltr;
 		}
@@ -61,11 +76,8 @@ input	{	text-align: left;
 			height: 100%;	
 			padding:5px;
 			margin:0px;
-			/*border-width: 0px !important;
-			border-right: thick double #ffffff !important;*/
 			box-sizing: border-box;
 			line-height: 200%;
 			overflow-y: scroll;
-
 			direction: rtl;
 		}
