--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 .main 	{		color: #ffffff;
-				background-color: #0000ff;
+				background-color: #ffffff;
 				font-family:sans-serif;
 				border-color: #ffffff;
 			 	border-style:solid;
