--- a/CSS/main.css
+++ b/CSS/main.css
@@ -22,8 +22,14 @@
 			}
 
 .centred{	transform: translateX(50%) ;
-		
+
 		}
+
+.canvasOverlay{	position: absolute;
+    						left: 0px;
+    						top: 0px;
+    						z-index: 10;
+							}
 
 .slider-width100{ width: 100px;
 		}
@@ -48,11 +54,11 @@ html, body {	width:  100%;
 				background-color: #ffffff;
 				overflow: hidden;
 	   		}
-	
+
 button	{}
 
 select	{}
-	
+
 form	{	margin:0px;
 			border-width: 0px !important;
 			direction: ltr;
@@ -64,7 +70,7 @@ input	{	text-align: left;
 		}
 
 #canvas{	float:left;
-			
+
 			margin:0px;
 			padding:0px;
 		}
@@ -76,7 +82,7 @@ input	{	text-align: left;
 
 #menus{		float:left;
 			width: 220px;
-			height: 100%;	
+			height: 100%;
 			padding:5px;
 			margin:0px;
 			box-sizing: border-box;
